// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Component Renders the carousel component 1`] = `
<body>
  <div>
    <section
      class="carousel"
    >
      <div
        class="carousel__chosen-image"
      >
        <button
          class="button button__primary"
          data-testid="test-id-carousel-choose-button"
          type="submit"
        >
          Choose this image
        </button>
        <p>
          Chosen image:
           None
        </p>
      </div>
      <div
        class="false"
        data-autoplay="{\\"delay\\":5000,\\"pauseOnMouseEnter\\":true}"
        data-centeredslides="true"
        data-loop="true"
        data-modules="[{},{},{},{}]"
        data-navigation="true"
        data-pagination="{\\"type\\":\\"bullets\\",\\"clickable\\":true}"
        data-slidesperview="1"
        data-testid="swiper"
        data-thumbs="{\\"swiper\\":null}"
      >
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="2B.png"
            class="swiper__image"
            draggable="false"
            src="2B.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Kratos.png"
            class="swiper__image"
            draggable="false"
            src="Kratos.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Alfira-face.jpg"
            class="swiper__image"
            draggable="false"
            src="Alfira-face.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Shanalotte.jpg"
            class="swiper__image"
            draggable="false"
            src="Shanalotte.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Edelgard.jpg"
            class="swiper__image"
            draggable="false"
            src="Edelgard.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Tiefling.jpg"
            class="swiper__image"
            draggable="false"
            src="Tiefling.jpg"
          />
        </div>
      </div>
      <div
        data-breakpoints="{\\"480\\":{\\"slidesPerView\\":3,\\"spaceBetween\\":5},\\"768\\":{\\"slidesPerView\\":4,\\"spaceBetween\\":10},\\"1024\\":{\\"slidesPerView\\":5,\\"spaceBetween\\":10}}"
        data-modules="[{},{},{}]"
        data-slidesperview="1"
        data-spacebetween="10"
        data-testid="swiper"
        data-watchslidesprogress="true"
      >
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="2B.png"
            class="swiper__thumbnail"
            draggable="false"
            src="2B.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Kratos.png"
            class="swiper__thumbnail"
            draggable="false"
            src="Kratos.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Alfira-face.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Alfira-face.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Shanalotte.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Shanalotte.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Edelgard.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Edelgard.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Tiefling.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Tiefling.jpg"
          />
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`Carousel Component Successfully gets an empty list of files 1`] = `
<body>
  <div>
    <div
      class="loadingWrapper"
      data-testid="test-id-loading-spinner"
    >
      <span
        class="loadingSpinner"
      />
      <p
        class="loadingText"
      >
        Loading, please wait...
      </p>
    </div>
  </div>
</body>
`;

exports[`Carousel Component Updates the swiper 1`] = `
<body>
  <div>
    <section
      class="carousel"
    >
      <div
        class="carousel__chosen-image"
      >
        <button
          class="button button__primary"
          data-testid="test-id-carousel-choose-button"
          type="submit"
        >
          Choose this image
        </button>
        <p>
          Chosen image:
           2B.png
        </p>
      </div>
      <div
        class="false"
        data-autoplay="{\\"delay\\":5000,\\"pauseOnMouseEnter\\":true}"
        data-centeredslides="true"
        data-loop="true"
        data-modules="[{},{},{},{}]"
        data-navigation="true"
        data-pagination="{\\"type\\":\\"bullets\\",\\"clickable\\":true}"
        data-slidesperview="1"
        data-testid="swiper"
        data-thumbs="{\\"swiper\\":null}"
      >
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="2B.png"
            class="swiper__image swiper__image--chosen"
            draggable="false"
            src="2B.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Kratos.png"
            class="swiper__image"
            draggable="false"
            src="Kratos.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Alfira-face.jpg"
            class="swiper__image"
            draggable="false"
            src="Alfira-face.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Shanalotte.jpg"
            class="swiper__image"
            draggable="false"
            src="Shanalotte.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Edelgard.jpg"
            class="swiper__image"
            draggable="false"
            src="Edelgard.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Tiefling.jpg"
            class="swiper__image"
            draggable="false"
            src="Tiefling.jpg"
          />
        </div>
      </div>
      <div
        data-breakpoints="{\\"480\\":{\\"slidesPerView\\":3,\\"spaceBetween\\":5},\\"768\\":{\\"slidesPerView\\":4,\\"spaceBetween\\":10},\\"1024\\":{\\"slidesPerView\\":5,\\"spaceBetween\\":10}}"
        data-modules="[{},{},{}]"
        data-slidesperview="1"
        data-spacebetween="10"
        data-testid="swiper"
        data-watchslidesprogress="true"
      >
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="2B.png"
            class="swiper__thumbnail swiper__thumbnail--chosen"
            draggable="false"
            src="2B.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Kratos.png"
            class="swiper__thumbnail"
            draggable="false"
            src="Kratos.png"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Alfira-face.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Alfira-face.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Shanalotte.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Shanalotte.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Edelgard.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Edelgard.jpg"
          />
        </div>
        <div
          data-testid="swiper-slide"
        >
          <img
            alt="Tiefling.jpg"
            class="swiper__thumbnail"
            draggable="false"
            src="Tiefling.jpg"
          />
        </div>
      </div>
    </section>
  </div>
</body>
`;
